# kidz-draw

./: CMakeLists.txt  canvas.hh  cursor.cc  cursor.hh  draw.cc  httpd.hh  mycursor.cc  png.hh  screen.hh  snapshots.cc  snapshots.hh  surface.hh  surfacepixels.hh  texture.hh  webserver.hh
buttons/: clear.hh  color.hh  snapshot.hh
cmake/: FindLibmicrohttpd.cmake  FindSDL2.cmake
data/: CMakeLists.txt  arrow.cur  noun-project.txt  origin
tools/: CMakeLists.txt  embed.cc
